--- a/WebAppLogin/Views/Shared/_Layout.cshtml
+++ b/WebAppLogin/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Opciones</a>
                         <div class="dropdown-menu">
-                            @Html.ActionLink("Gestión de Suscripciones", "vPerfil_Admin_Suscripciones", "Home", null, new { @class = "nav-link" })
+                            @Html.ActionLink("Gestión de Suscripciones", "vSuscripcionAdmin", "Home", null, new { @class = "nav-link" })
                             <div class="dropdown-divider"></div>
                             @Html.ActionLink("Gestión de usuarios", "vReg_Admin", "Home", null, new { @class = "nav-link" })
                             @Html.ActionLink("Gestión de propiedades", "vPropiedades", "Home", null, new { @class = "nav-link" })
