Commit con avances

--- a/WebAppLogin/Views/Perfiles/AccountProfile.cshtml
+++ b/WebAppLogin/Views/Perfiles/AccountProfile.cshtml
@@ -98,7 +98,7 @@
                                 @Html.Label(cuenta.VERIFICADO.ToString())
                             </td>
                         </tr>
-                        <tr><td colspan="2"><input type="submit" value="Guardar Cambios" class="btn btn-info"></td></tr>
+                        <tr><td colspan="2"><input type="submit" id="frmPerfil" value="Guardar Cambios" class="btn btn-info"></td></tr>
                     </table>
                 </div>
             }
