--- a/WebAppLogin/Views/Registrar/vPropietarios.cshtml
+++ b/WebAppLogin/Views/Registrar/vPropietarios.cshtml
@@ -8,6 +8,13 @@
 
 <h3>Registrar Propietario</h3>
 
+<div class="container body-content">
+    <div class="alert alert-success alert-dismissable" style="display: none" id="alert_container">
+        <button type="button" class="close" onclick="$('.alert').hide()">&times;</button>
+        <span id="alert_message"></span>
+    </div>
+</div>
+
 <div class="card border-secondary" style="margin-top: 50px;">
 
     <div class="card-body">
