--- a/WebAppLogin/Views/Registrar/vRegistrarBanco.cshtml
+++ b/WebAppLogin/Views/Registrar/vRegistrarBanco.cshtml
@@ -7,6 +7,12 @@
 <script src="~/Scripts/Views/vRegistrarBanco.js"></script>
 
 <h3>Registrar Banco</h3>
+<div class="container body-content">
+    <div class="alert alert-success alert-dismissable" style="display: none" id="alert_container">
+        <button type="button" class="close" onclick="$('.alert').hide()">&times;</button>
+        <span id="alert_message"></span>
+    </div>
+</div>
 
 <div class="card border-secondary" style="margin-top: 50px;">
 
