--- a/WebAppLogin/Views/Registrar/vRegistrarUsuarioFinal.cshtml
+++ b/WebAppLogin/Views/Registrar/vRegistrarUsuarioFinal.cshtml
@@ -14,6 +14,12 @@
     <div>
         <h3>Registrar Usuario</h3>
     </div>
+    <div class="container body-content">
+        <div class="alert alert-success alert-dismissable" style="display: none" id="alert_container">
+            <button type="button" class="close" onclick="$('.alert').hide()">&times;</button>
+            <span id="alert_message"></span>
+        </div>
+    </div>
     <div class="card border-secondary" style="margin-top: 50px;">
 
         <div class="card-body">
