--- a/WebAppLogin/Views/Shared/_Layout.cshtml
+++ b/WebAppLogin/Views/Shared/_Layout.cshtml
@@ -38,7 +38,9 @@
                             else if (Session["IdRol"].ToString() == "03")
                             {
                                 @Html.ActionLink("Métodos de pago", "vPropiedades", "Perfiles", null, new { @class = "nav-link" })
-                                <div class="dropdown-divider"></div> }
+                                <div class="dropdown-divider"></div>
+
+                                @Html.ActionLink("Registro de agencia", "vRegistrarAgencia", "Registrar", null, new { @class = "nav-link" })}
                             else if (Session["IdRol"].ToString() == "04")
                             {
                                 @Html.ActionLink("Gestión de agentes", "vPropiedades", "Perfiles", null, new { @class = "nav-link" })
