--- a/WebAppLogin/Views/Perfiles/UsuarioProfile.cshtml
+++ b/WebAppLogin/Views/Perfiles/UsuarioProfile.cshtml
@@ -1,5 +1,9 @@
 ﻿@model Entities_POJO.Usuario
 @using Entities_POJO;
+<script src="~/Scripts/datetimeplugin.js"></script>
+<script src="~/Scripts/moment.js"></script>
+<script src="~/Scripts/moment-with-locales.js"></script>
+<script src="~/Scripts/Views/UsuarioProfile.js"></script>
 
 @{
     ViewBag.Title = "UsuarioProfile";
@@ -12,99 +16,61 @@
 <div class="container">
     <div class="row">
         <div class="col-12">
-
-            @using (Html.BeginForm("_ActualizarCuenta", "Registrar", FormMethod.Post))
+            @Html.AntiForgeryToken()
+            @if (usuario.Id_Rol == "01")
             {
-                @Html.AntiForgeryToken()
-                if (usuario.Id_Rol == "01")
-                {
-                    <h2>Perfil de Administrador</h2>
-                }
-                else if (usuario.Id_Rol == "02")
-                {
-                    <h2>Perfil de Usuario</h2>
-                }
-                else if (usuario.Id_Rol == "03")
-                {
-                    <h2>Perfil de Propietario</h2>
-                }
-                else if (usuario.Id_Rol == "04")
-                {
-                    <h2>Perfil de Agente de Bienes Raíces</h2>
-                }
-                else if (usuario.Id_Rol == "05")
-                {
-                    <h2>Perfil Bancario</h2>
-                }
-                if (usuario.Id_Rol == "06")
-                {
-                    <h2>Perfil de Administrador de Agencia</h2>
-                }
-                <div class="form-">
-                    <table class="">
-                        <tr>
-                            <th>Nombre:</th>
-                            <td>
-                                @Html.TextBox("Nombre", usuario.Nombre)
-                            </td>
-                        </tr>
-                        @if (usuario.Id_Rol != "05" && usuario.Id_Rol != "06")
-                        {
-                            <tr>
-                                <th>Apellidos:</th>
-                                <td>
-                                    @Html.TextBox("Apellidos", usuario.Apellidos)
-                                </td>
-                            </tr>
-                        }
-                        <tr>
-                            <th>Correo Electrónico:</th>
-                            <td>
-                                @Html.TextBox("Email", usuario.Email)
-                            </td>
-                        </tr>
-
-                        <tr>
-                            <th>Rol:</th>
-                            <td>
-                                @Html.Label("Nombre de Rol", usuario.Nombre_Rol)
-                            </td>
-                        </tr>
-
-                        <tr>
-                            <th>Teléfono:</th>
-                            <td>
-                                @Html.TextBox("Teléfono", usuario.Telefono)
-                            </td>
-                        </tr>
-
-                        <tr>
-                            <th>Estado:</th>
-                            <td>
-                                @Html.Label("cuenta", usuario.Estado)
-                            </td>
-                        </tr>
-
-                        @if (usuario.Id_Rol != "05" && usuario.Id_Rol != "06")
-                        {
-                            <tr>
-                                <th>Fecha Nacimiento:</th>
-                                <td>
-                                    @Html.TextBox("cuenta", usuario.Fecha_Nac)
-                                </td>
-                            </tr>
-                        }
-                        <tr>
-                            <th>Verificado:</th>
-                            <td>
-                                @Html.Label(usuario.Verificado.ToString())
-                            </td>
-                        </tr>
-                        <tr><td colspan="2"><input type="submit" value="Guardar Cambios" class="btn btn-info"></td></tr>
-                    </table>
-                </div>
+                <h2>Perfil de Administrador</h2>
             }
+            else if (usuario.Id_Rol == "02")
+            {
+                <h2>Perfil de Propietario</h2>
+            }
+            else if (usuario.Id_Rol == "03")
+            {
+                <h2>Perfil de Usuario</h2>
+            }
+            else if (usuario.Id_Rol == "04")
+            {
+                <h2>Perfil de Agente de Bienes Raíces</h2>
+            }
+            else if (usuario.Id_Rol == "06")
+            {
+                <h2>Perfil de Administrador de Agencia</h2>
+            }
+        <div class="form">
+            <div>
+                <label>Tipo de Identificación</label>
+            </div>
+            <select name="Tipo_Id" id="tipo-id-U">
+                <option value="">Seleccione uno</option>
+                <option value="Física">Física</option>
+                <option value="Jurídica">Jurídica</option>
+                <option value="DIMEX">DIMEX</option>
+                <option value="Pasaporte">Pasaporte</option>
+            </select>
+            <form id="forma_Usuario_Upd">
+                @Html.CtrlInputDisabled(id: "txtId", type: "text", label: "ID", columnDataName: "Id")
+                @Html.CtrlInput(id: "txtNombre", type: "text", label: "Nombre", columnDataName: "Nombre")
+                @Html.CtrlInput(id: "txtApellidos", type: "text", label: "Apellidos", columnDataName: "Apellidos")
+                @Html.CtrlInput(id: "txtDOB", type: "date", label: "Fecha de Nacimiento", columnDataName: "Fecha_Nac")
+                @Html.CtrlInput(id: "txtEmail", type: "text", label: "Email", columnDataName: "Email")
+                @Html.CtrlInputDisabled(id: "txtEstado", type: "text", label: "Estado", columnDataName: "Estado")
+                @Html.CtrlInput(id: "txtCel", type: "text", label: "Telefono", columnDataName: "Telefono")
+                @Html.CtrlInputHidden(id: "txtRol", type: "text", label: "ID Rol", columnDataName: "Id_Rol")
+                @if (usuario.Id_Rol == "04")
+                {
+                    @Html.CtrlInput(id: "txtAgencia", type: "text", label: "ID Agencia", columnDataName: "Id_Agencia")
+                }
+                @Html.CtrlInput(id: "txtVerificado", type: "text", label: "Verificado", columnDataName: "Verificado")
+                @Html.CtrlInputDisabled(id: "txtNomRol", type: "text", label: "NombreRol", columnDataName: "Nombre_Rol")
+                @Html.CtrlInputHidden(id: "txtCodEmail", type: "text", label: "CodEmail", columnDataName: "Cod_Email")
+                @Html.CtrlInputHidden(id: "txtCodCel", type: "text", label: "CodCel", columnDataName: "Cod_Celular")
+            </form>
+        </div>
         </div>
     </div>
+</div>
+<div class="col-md-8">
+    @Html.CtrlButton(viewName: "UsuarioProfile", id: "btnUpdate", label: "Guardar cambios", onClickFunction: "UpdateU", buttonType: "info")
 </div>
 
