--- a/WebAppLogin/Views/Home/vEquipo.cshtml
+++ b/WebAppLogin/Views/Home/vEquipo.cshtml
@@ -95,7 +95,7 @@
             </ul>
             <ul id="teamCont2">
                 <li class="teamCard tc-sl1">
-                    <img src="../../Content/imgs/foto_darren.jpeg" class="memberPic">
+                    <img src="../../Content/imgs/foto_darren.jpg" class="memberPic">
                     <p class="memberTitle">Darren Jiménez</p>
                     <p class="memberSubTitle">Quality I</p>
                 </li>
