Integración de registros, desplegable en reg Admin, deshabilitado registro de ID de suscripciones.

--- a/WebAppLogin/Views/Perfiles/vSuscripcionAdmin.cshtml
+++ b/WebAppLogin/Views/Perfiles/vSuscripcionAdmin.cshtml
@@ -23,7 +23,7 @@
             <div class="col-lg-6">
                 <div class="bs-component">
                     <form id="frmEdition">
-                        @Html.CtrlInput(id: "txtId", type: "text", label: "Id", columnDataName: "Id")
+                        @Html.CtrlInputDisabled(id: "txtId", type: "text", label: "Id", columnDataName: "Id")
                         @Html.CtrlInput(id: "txtNombre", type: "text", label: "Nombre", columnDataName: "Nombre")
                         @Html.CtrlInput(id: "txtAnuncios", type: "number", label: "Anuncios", columnDataName: "Cantidad_Anuncios")
                         @Html.CtrlInput(id: "txtFacturacion", type: "text", label: "Facturacion", columnDataName: "Periodo_Facturacion")
