--- a/WebAppLogin/Views/Registrar/vRegistrarPropiedades.cshtml
+++ b/WebAppLogin/Views/Registrar/vRegistrarPropiedades.cshtml
@@ -10,7 +10,7 @@
 <script src="~/Scripts/Views/vRegistrarPropiedades.js"></script>
 @{ Layout = "~/Views/Shared/_Layout.cshtml"; }
 
-<h2>Registrar Usuario</h2>
+<h2>Registrar Propiedades</h2>
 
 <form id="forma_Propiedad_Upd">
     @Html.CtrlInputDisabled(id: "txtID", type: "text", label: "Código", columnDataName: "Id")
