--- a/WebAppLogin/Views/Registrar/vRegistrarBanco.cshtml
+++ b/WebAppLogin/Views/Registrar/vRegistrarBanco.cshtml
@@ -10,7 +10,7 @@
 <div class="container body-content">
     <div class="alert alert-success alert-dismissable" style="display: none" id="alert_container">
         <button type="button" class="close" onclick="$('.alert').hide()">&times;</button>
-        <span id="alert_message"></span>
+        <span id="alert_message_banco"></span>
     </div>
 </div>
 
