--- a/WebAppLogin/Views/Registrar/vRegistrarUsuarioFinal.cshtml
+++ b/WebAppLogin/Views/Registrar/vRegistrarUsuarioFinal.cshtml
@@ -17,7 +17,7 @@
     <div class="container body-content">
         <div class="alert alert-success alert-dismissable" style="display: none" id="alert_container">
             <button type="button" class="close" onclick="$('.alert').hide()">&times;</button>
-            <span id="alert_message"></span>
+            <span id="alert_message_final"></span>
         </div>
     </div>
     <div class="card border-secondary" style="margin-top: 50px;">
