--- a/WebAppLogin/Views/Shared/_Layout.cshtml
+++ b/WebAppLogin/Views/Shared/_Layout.cshtml
@@ -39,12 +39,12 @@
                             {
                                 @Html.ActionLink("Métodos de pago", "vPropiedades", "Perfiles", null, new { @class = "nav-link" })
                                 <div class="dropdown-divider"></div>
-
-                                @Html.ActionLink("Registro de agencia", "vRegistrarAgencia", "Registrar", null, new { @class = "nav-link" })}
+                                @Html.ActionLink("Registro de agencia", "vRegistrarAgencia", "Home", null, new { @class = "nav-link" })
+                            }
                             else if (Session["IdRol"].ToString() == "04")
                             {
                                 @Html.ActionLink("Gestión de agentes", "vPropiedades", "Perfiles", null, new { @class = "nav-link" })
-                                <div class="dropdown-divider"></div> }
+                                <div> class="dropdown-divider"></div> }
                             else if (Session["IdRol"].ToString() == "05")
                             {
                                 @Html.ActionLink("Gestión de propiedades", "vPropiedades", "Perfiles", null, new { @class = "nav-link" })
