--- a/WebAppLogin/Views/Shared/_Layout_login.cshtml
+++ b/WebAppLogin/Views/Shared/_Layout_login.cshtml
@@ -19,6 +19,10 @@
             </div>
         </div>
     </div>
+    <div class="alert alert-success alert-dismissable" style="display: none" id="alert_container">
+    <button type="button" class="close" onclick="$('.alert').hide()">&times;</button>
+    <span id="alert_message"></span>
+    </div>
     <div class="container body-content">
         @RenderBody()
         <hr />
