--- a/WebAppLogin/Views/Shared/_Layout.cshtml
+++ b/WebAppLogin/Views/Shared/_Layout.cshtml
@@ -34,14 +34,16 @@
                             else if (Session["IdRol"].ToString() == "02")
                             {
                                 @Html.ActionLink("Registrar Propiedades", "vRegistrarPropiedades", "Registrar", null, new { @class = "nav-link" })
+                                <div class="dropdown-divider"></div>
                                 @Html.ActionLink("Gestión de propiedades", "vPropiedades", "Perfiles", null, new { @class = "nav-link" })
-                                <div class="dropdown-divider"></div>}
-
+                            }
                             else if (Session["IdRol"].ToString() == "03")
                             {
                                 @Html.ActionLink("Métodos de pago", "vPropiedades", "Perfiles", null, new { @class = "nav-link" })
                                 <div class="dropdown-divider"></div>
                                 @Html.ActionLink("Registro de agencia", "vRegistrarAgencia", "Home", null, new { @class = "nav-link" })
+                                <div class="dropdown-divider"></div>
+                                @Html.ActionLink("Pagos", "PaymentWithPaypal", "Home", null, new { @class = "nav-link" })
                             }
                             else if (Session["IdRol"].ToString() == "04")
                             {
