--- a/WebAppLogin/Views/Shared/_Layout_login.cshtml
+++ b/WebAppLogin/Views/Shared/_Layout_login.cshtml
@@ -4,9 +4,11 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TechHouse</title>
+    <script src="~/Scripts/jquery-3.3.1.min.js"></script>
     <script src="~/Scripts/bootstrap.min.js"></script>
     <link href="~/Content/bootstrap.css" rel="stylesheet" />
     <link href="~/Content/Site.css" rel="stylesheet" />
+    <script src="~/Scripts/Views/ControlActions.js"></script>
 </head>
 <body>
     <div class="navbar navbar-expand-lg fixed-top navbar-dark bg-primary">
@@ -19,13 +21,13 @@
             </div>
         </div>
     </div>
-    <div class="alert alert-success alert-dismissable" style="display: none" id="alert_container">
-    <button type="button" class="close" onclick="$('.alert').hide()">&times;</button>
-    <span id="alert_message"></span>
-    </div>
     <div class="container body-content">
         @RenderBody()
         <hr />
+    </div>
+    <div class="alert alert-success alert-dismissable" style="display: none" id="alert_container">
+        <button type="button" class="close" onclick="$('.alert').hide()">&times;</button>
+        <span id="alert_message"></span>
     </div>
 </body>
 
