--- a/WebAppLogin/Views/Registrar/vRegistrarUsuarioFinal.cshtml
+++ b/WebAppLogin/Views/Registrar/vRegistrarUsuarioFinal.cshtml
@@ -7,6 +7,7 @@
 <html>
 <head>
     <script src="~/Scripts/Views/vRegistrarUsuarioFinal.js"></script>
+    <script src="~/Scripts/Views/ControlActions.js"></script>
     <meta name="viewport" content="width=device-width" />
     <title>Registrar Usuario</title>
 </head>
@@ -14,11 +15,9 @@
     <div>
         <h3>Registrar Usuario</h3>
     </div>
-    <div class="container body-content">
-        <div class="alert alert-success alert-dismissable" style="display: none" id="alert_container">
-            <button type="button" class="close" onclick="$('.alert').hide()">&times;</button>
-            <span id="alert_message_final"></span>
-        </div>
+    <div class="alert alert-success alert-dismissable" style="display: none" id="alert_container">
+        <button type="button" class="close" onclick="$('.alert').hide()">&times;</button>
+        <span id="alert_message"></span>
     </div>
     <div class="card border-secondary" style="margin-top: 50px;">
 
