--- a/WebAppLogin/Views/Registrar/vRegistrarPropiedades.cshtml
+++ b/WebAppLogin/Views/Registrar/vRegistrarPropiedades.cshtml
@@ -4,28 +4,98 @@
     ViewBag.Title = "vRegistrarPropiedades";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+<link rel="stylesheet" href="~/Content/vRegistrarPropiedades.css" type="text/css">
 <script src="~/Scripts/datetimeplugin.js"></script>
 <script src="~/Scripts/moment.js"></script>
 <script src="~/Scripts/moment-with-locales.js"></script>
+<script src="https://widget.cloudinary.com/v2.0/global/all.js" type="text/javascript"></script>
 <script src="~/Scripts/Views/vRegistrarPropiedades.js"></script>
+<script async
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDIAAdSNPZ0_foxkaSZuQCh-oGNN5awiS8&libraries=places&callback=initMap">
+</script>
+
+
 @{ Layout = "~/Views/Shared/_Layout.cshtml"; }
 
-<h2>Registrar Propiedades</h2>
+<head>
+    <script src="~/Scripts/Views/vRegistrarPropiedades.js"></script>
+</head>
+<body>
+    <h2>Registrar Propiedades</h2>
 
-<form id="forma_Propiedad_Upd">
-    @Html.CtrlInput(id: "txtID", type: "text", label: "Código", columnDataName: "Id")
-    @Html.CtrlInput(id: "txtTipo", type: "text", label: "Tipo de Propiedad", columnDataName: "Tipo")
-    @Html.CtrlInput(id: "txtOpcionCompra", type: "text", label: "Opción de Compra", columnDataName: "Opcion_Compra")
-    @Html.CtrlInput(id: "txtFechaPub", type: "date", label: "Fecha de Publicación", columnDataName: "Fecha_Publicacion")
-    @Html.CtrlInput(id: "txtLatitud", type: "text", label: "Latitud", columnDataName: "Latitud")
-    @Html.CtrlInput(id: "txtLong", type: "text", label: "Longitud", columnDataName: "Longitud")
-    @Html.CtrlInput(id: "txtPrecio", type: "number", label: "Precio", columnDataName: "Precio")
-    @Html.CtrlInput(id: "txtEstado", type: "text", label: "Estado", columnDataName: "Estado")
-    @Html.CtrlInput(id: "txtProvincia", type: "text", label: "Provincia", columnDataName: "Provincia")
-    @Html.CtrlInput(id: "txtCanton", type: "text", label: "Cantón", columnDataName: "Canton")
-    @Html.CtrlInput(id: "txtDistrito", type: "text", label: "Distito", columnDataName: "Distrito")
-    @Html.CtrlInput(id: "txtDirExacta", type: "textbox", label: "Dirección Exacta", columnDataName: "Direccion_Exacta") 
-</form>
-<div class="col-md-12">
-    @Html.CtrlButton(viewName: "vRegistrarPropiedades", id: "btnCreate", label: "Registrar", onClickFunction: "Create", buttonType: "success")
-</div>
+    <div>
+        <label>Tipo de Propiedad</label>
+    </div>
+    <select name="Tipo_Id" id="tipo-id-Propiedad">
+        <option value="">Seleccione uno</option>
+        <option value="Casa">Casa</option>
+        <option value="Apartamento">Apartamento</option>
+        <option value="Condominio">Condominio</option>
+        <option value="Lote">Lote</option>
+    </select>
+    <form id="forma_Propiedad_Upd">
+        @*@Html.CtrlInputDisabled(id: "txtID", type: "text", label: "Código", columnDataName: "Id")
+        @Html.CtrlInput(id: "txtTipo", type: "text", label: "Tipo de Propiedad", columnDataName: "Tipo")*@
+        @Html.CtrlInput(id: "txtOpcionCompra", type: "text", label: "Descripción", columnDataName: "Opcion_Compra")
+        @Html.CtrlInputHidden(id: "txtFechaPub", type: "date", label: "Fecha de Publicación", columnDataName: "Fecha_Publicacion")
+        @*@Html.CtrlInput(id: "txtLatitud", type: "text", label: "Latitud", columnDataName: "Latitud")
+        @Html.CtrlInput(id: "txtLong", type: "text", label: "Longitud", columnDataName: "Longitud")*@
+        @Html.CtrlInput(id: "txtPrecio", type: "number", label: "Precio", columnDataName: "Precio")
+        @* @Html.CtrlInputDisabled(id: "txtEstado", type: "text", label: "Estado", columnDataName: "Estado")
+        @Html.CtrlInput(id: "txtProvincia", type: "text", label: "Provincia", columnDataName: "Provincia")
+        @Html.CtrlInput(id: "txtCanton", type: "text", label: "Canton", columnDataName: "Canton")
+        @Html.CtrlInput(id: "txtDistrito", type: "text", label: "Distito", columnDataName: "Distrito")*@
+        @Html.CtrlInput(id: "txtDirExacta", type: "text", label: "Dirección Exacta", columnDataName: "Direccion_Exacta")
+
+    </form>
+    <div>
+        <img id="foto-propiedad" src="~/Content/imgs/placeholder.png">
+
+        <button type="button" id="upload_widget2" class="cloudinary-button">Subir imagenes</button>
+    </div>
+    <div><input type="text" id="map_search" size="50" /></div>
+    
+    <div id="map">
+
+    </div>
+    <script>
+        let map = new google.maps.Map(document.getElementById('map'), {
+            center: { lat: 9.934739, lng: -84.087502},
+            zoom: 15
+        });
+
+        let marker = new google.maps.Marker({
+            position: {
+                lat: 9.934739, lng: -84.087502
+            },
+            map: map,
+            draggable: true
+        });
+
+        let searchBox = new google.maps.places.SearchBox(document.getElementById('map_search'));
+
+        //Place change event on search box
+        google.maps.event.addListener(searchBox, 'places_changed', function () {
+            //console.log(searchBox.getPlaces());
+            var places = searchBox.getPlaces();
+
+            //bounds
+            var bounds = new google.maps.LatLngBounds();
+            var i, place;
+
+            for (i = 0; place = places[i]; i++) {
+
+                //console.log(place.geometry.location);
+                bounds.extend(place.geometry.location);
+                marker.setPosition(place.geometry.location);
+            }
+
+            map.fitBounds(bounds);
+            map.setZoom(15);
+        })
+    </script>
+    <div class="col-md-8">
+        @Html.CtrlButton(viewName: "vRegistrarPropiedades", id: "btnCreate", label: "Registrar", onClickFunction: "CreateP", buttonType: "success")
+    </div>
+
+</body>
